--- a/pages/game_screen.html
+++ b/pages/game_screen.html
@@ -13,7 +13,7 @@
 
     <!-- balloon div -->
     <div class="balloon" id="balloon">
-        <img class='disable-dbl-tap-zoom' id='ball' src="../img/game_screen/balloon.png" alt=""  style="width: 180px;" onclick="increaseSize()">
+        <img class='disable-dbl-tap-zoom' id='ball' src="../img/game_screen/balloon.png" alt="balloon"  style="width: 180px;" onclick="increaseSize()">
         <audio id="inflate" src="../audio/ballooninflate2.wav"></audio>
         <audio id="pop" src="../audio/balloonpop2.wav"></audio>
     </div>
