--- a/pages/instruction_screen.html
+++ b/pages/instruction_screen.html
@@ -12,4 +12,6 @@
             mini surprise to pop out! </p>
     </div>
     <button id="play_button" onclick="load()" type="button">Play</button>
+
+    <p class="share" id="share" onclick="share()">Share</p>
 </div>
