--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 
     <script src="./js/splash_screen.js"></script>
     <script src="./js/instruction_screen.js"></script>
-    <script src="../js/balloon.js"></script>
-    <script src="../js/confetti.js"></script>
+    <script src="./js/balloon.js"></script>
+    <script src="./js/confetti.js"></script>
     <script src="./js/end_screen.js"></script>
 </body>
 </html>
