--- a/pages/end_screen.html
+++ b/pages/end_screen.html
@@ -3,7 +3,7 @@
 <img id="client_logo" src="./img/splash_screen/client.svg">
 
 <div class="cards" id="cards" style="text-align:center;">
-    <img src="../img/end_screen/quote.png" id="card" class="animate__animated animate__bounceIn"  alt="">
+    <img class="quote" id="quote" id="card" class="animate__animated animate__bounceIn"  alt="">
 </div>
 
 <p class="share" id="share" onclick="share()">Share</p>
