--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Pop the Ballon</title>
     <link rel="stylesheet" href="./css/index.css">
     <link rel="stylesheet" href="./css/splash_screen.css">
+
+    <!-- animate style -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
 </head>
 <body style="display:none;">
     
