Update UI of the game and screenshot

--- a/pages/end_screen.html
+++ b/pages/end_screen.html
@@ -1,10 +1,13 @@
 <link rel="stylesheet" href="./css/end_screen.css">
 
-<img id="client_logo" src="./img/splash_screen/client.svg">
+<img id="client_logo_smaller" src="./img/splash_screen/logo.svg">
 
-<div class="cards" id="cards" style="text-align:center;">
-    <img class="quote animate__animated card animate__bounceIn" id="quote">
+<div class="cards quote animate__animated card animate__bounceIn" id="cards" style="text-align:center;">
+    <img id="quote">
+    
+    <img class="share" id="share" onclick="share()" src="./img/end_screen/share.png">
 </div>
 
-<p class="share" id="share" onclick="share()">Share</p>
+<button id="play_button" onclick="" type="button">Next!</button>
+
 
