--- a/pages/game_screen.html
+++ b/pages/game_screen.html
@@ -1,20 +1,19 @@
 
 <link rel="stylesheet" href="./css/game_screen.css">
 
-    <!-- title of game -->
-    <div id="game-title">
-        <h1 id="title2">POP the Ballon!</h1>
-    </div>
+<img id="client_logo_smaller" src="./img/splash_screen/logo.svg">
+
+<img id="mute" src="./img/game_screen/mute.png">
 
     <!-- top title -->
     <div class="instruc" id="instruc">
-        Tap the balloon and see what happens!
+        Tap the bubble and see what happens!
     </div>
 
     <!-- balloon div -->
     <div class="balloon" id="balloon">
         <img class="help" id="help" src="./img/game_screen/help.png">
-        <img class='disable-dbl-tap-zoom' id='ball' src="./img/game_screen/balloon.png" alt="balloon"  style="width: 180px;" onclick="increaseSize()">
-        <audio id="inflate" src="../audio/ballooninflate2.wav"></audio>
-        <audio id="pop" src="../audio/balloonpop2.wav"></audio>
+        <img class='disable-dbl-tap-zoom' id='ball' src="./img/game_screen/balloon.png" alt="balloon"  style="width: 250px;" onclick="increaseSize()">
+        <audio id="inflate" src="./audio/ballooninflate2.wav"></audio>
+        <audio id="pop" src="./audio/balloonpop2.wav"></audio>
     </div>
