--- a/pages/instruction_screen.html
+++ b/pages/instruction_screen.html
@@ -1,16 +1,17 @@
 <link rel="stylesheet" href="./css/instuction_screen.css">
 
-<img id="client_logo" src="./img/splash_screen/client.svg">
+<img id="client_logo_smaller" src="./img/splash_screen/logo.svg">
 
 <div id="instuctions">
-    <h1 id="title">POP the Ballon!</h1>
+    <img src="./img/instruction_screen/title.svg" alt="">
     <div id="instructions_details">
-        <h1>Welcome to our Nurses' Day<br>
-        pre-event activities!</h1>
-        <p>Keep tapping the balloon and<br>
-            see how long it takes for your <br> 
-            mini surprise to pop out! </p>
+        <h1>Feeling weighed <br>
+            down by the various <br>
+            challenges in life?</h1>
+        <p>Take a pause and pop some <br>
+            bubbles to release the tension! <br>
+            Keep tapping for a mini surprise </p>
     </div>
-    <button id="play_button" onclick="load()" type="button">Play</button>
+    <button id="play_button" onclick="load()" type="button">Play Game!</button>
 
 </div>
