--- a/index.html
+++ b/index.html
@@ -7,11 +7,38 @@
     <title>Pop the Ballon</title>
     <link rel="stylesheet" href="./css/index.css">
     <link rel="stylesheet" href="./css/splash_screen.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;900&display=swap" rel="stylesheet">
+
+    <!-- Google Tag Manager -->
+    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+    })(window,document,'script','dataLayer','GTM-K6GW3MX');</script>
+    <!-- End Google Tag Manager -->
+    
+
+    <!-- Google tag (gtag.js) for youthcorps-->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-BYXDWKE89F"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-BYXDWKE89F');
+    </script>
 
     <!-- animate style -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
 </head>
 <body style="display:none;">
+
+    <!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-K6GW3MX"
+    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
     
     <div id="splash_screen" w3-include-html="./pages/splash_screen.html"></div>
     <div id="instruction_screen" w3-include-html="./pages/instruction_screen.html" class="starting"></div>
