Update UI of more information and screenshot picture

--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
     <div id="instruction_screen" w3-include-html="./pages/instruction_screen.html" class="starting"></div>
     <div id="game_screen" w3-include-html="./pages/game_screen.html" class="hide"></div>
     <div id="end_screen" w3-include-html="./pages/end_screen.html" class="hide"></div>
+    <div id="information_screen" w3-include-html="./pages/information_screen.html" class="hide"></div>
     
     <script src="./js/w3.js"></script>
     <script>
