--- a/pages/game_screen.html
+++ b/pages/game_screen.html
@@ -1,9 +1,10 @@
 
 <link rel="stylesheet" href="./css/game_screen.css">
+<link rel="stylesheet" href="./css/balloon.css">
 
 <img id="client_logo_smaller" src="./img/splash_screen/logo.svg">
 
-<img id="mute" src="./img/game_screen/mute.png">
+<img id="mute" onclick="muteSound()" src="./img/game_screen/mute.png">
 
     <!-- top title -->
     <div class="instruc" id="instruc">
