Fix icon for information logo

--- a/pages/information_screen.html
+++ b/pages/information_screen.html
@@ -12,7 +12,7 @@
         supporter!</p>
 
     <div id="details">
-        <img src="../img/information_screen/timeLogo.png" alt="logo">
+        <img src="./img/information_screen/timeLogo.png" alt="logo">
         <div id="texts">
             <p><b>Opening Hours:</b> Every Thursday</p>
             <p>Evening 7pm – 9.30pm</p>
@@ -20,7 +20,7 @@
     </div>
 
     <div id="details">
-        <img src="../img/information_screen/locationLogo.png" alt="logo">
+        <img src="./img/information_screen/locationLogo.png" alt="logo">
         <div id="texts">
             <p><b>Location:</b> The Red Box @ 113</p>
             <p>Somerset Road</p>
