--- a/pages/information_screen.html
+++ b/pages/information_screen.html
@@ -32,6 +32,6 @@
         Supporter Programme!</p>
 </div>
 
-<button id="more_button" onclick="" type="button">Find out more!</button>
+<button id="more_button" onclick="link()" type="button">Find out more!</button>
 
 
