--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Pop the Ballon</title>
     <link rel="stylesheet" href="./css/index.css">
     <link rel="stylesheet" href="./css/splash_screen.css">
+    <link rel="stylesheet" href="./css/bubble.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;900&display=swap" rel="stylesheet">
@@ -55,6 +56,7 @@
     <script src="./js/splash_screen.js"></script>
     <script src="./js/instruction_screen.js"></script>
     <script src="./js/balloon.js"></script>
+    <script src="./js/bubble.js"></script>
     <script src="./js/confetti.js"></script>
     <script src="./js/end_screen.js"></script>
 </body>
