--- a/pages/instruction_screen.html
+++ b/pages/instruction_screen.html
@@ -6,10 +6,13 @@
     <img src="./img/instruction_screen/title.svg" alt="">
     <h1>Feeling weighed <br>
         down by the various <br>
-        challenges in life?</h1>
+        challenges in life?
+    </h1>
     <p>Take a pause and pop some <br>
         bubbles to release the tension! <br>
-        Keep tapping for a mini surprise </p>
+        Keep tapping for a mini surprise
+    </p>
+    
     <button id="play_button" onclick="load()" type="button">Play Game!</button>
 
 </div>
