--- a/pages/end_screen.html
+++ b/pages/end_screen.html
@@ -8,6 +8,8 @@
     <img class="share" id="share" onclick="share()" src="./img/end_screen/share.png">
 </div>
 
+<button id="emtpy" type="button">Play Game!</button>
+
 <button id="next_button" onclick="next()" type="button">Next!</button>
 
 
