--- a/pages/information_screen.html
+++ b/pages/information_screen.html
@@ -2,7 +2,8 @@
 
 <img id="picture" src="./img/information_screen/picture.png">
 
-<div id="info">
+<div class="background">
+    <div id="info">
     <h1>Take A Pause & Join us in Self-care Activities!</h1>
 
     <p>Looking for a space to unwind and <br>
@@ -27,11 +28,12 @@
         </div>
     </div>
 
-    <p>If you are interested in supporting <br> 
+    <p id="moreSpace">If you are interested in supporting <br> 
         others, join the Community Peer <br>
         Supporter Programme!</p>
+    </div>
+    <button id="more_button" onclick="link()" type="button">Find out more!</button>
 </div>
 
-<button id="more_button" onclick="link()" type="button">Find out more!</button>
 
 
