--- a/pages/instruction_screen.html
+++ b/pages/instruction_screen.html
@@ -12,6 +12,7 @@
         bubbles to release the tension! <br>
         Keep tapping for a mini surprise
     </p>
+    <button id="emtpy" type="button">Play Game!</button>
     
     <button id="play_button" onclick="load()" type="button">Play Game!</button>
 
