update rotate screen

--- a/index.html
+++ b/index.html
@@ -47,6 +47,14 @@
     <div id="end_screen" w3-include-html="./pages/end_screen.html" class="hide"></div>
     <div id="information_screen" w3-include-html="./pages/information_screen.html" class="hide"></div>
     
+    <div id="rotate" class="rotate">
+      <div class="backgroundImage"></div>
+        <h1>For the best experience,<br> 
+          please rotate your phone<br>
+          vertically.</h1>
+          <img src="./img/rotate/rotateIcon.png">
+    </div>
+
     <script src="./js/w3.js"></script>
     <script>
         //to bring in other HTML on the fly into this page
