fix rotation screen

--- a/index.html
+++ b/index.html
@@ -46,6 +46,8 @@
     <div id="game_screen" w3-include-html="./pages/game_screen.html" class="hide"></div>
     <div id="end_screen" w3-include-html="./pages/end_screen.html" class="hide"></div>
     <div id="information_screen" w3-include-html="./pages/information_screen.html" class="hide"></div>
+
+    <div id="redirect" w3-include-html="./pages/redirect.html" class="hide"></div>
     
     <div id="rotate" class="rotate">
       <div class="backgroundImage"></div>
