Update share image

--- a/pages/instruction_screen.html
+++ b/pages/instruction_screen.html
@@ -15,5 +15,7 @@
     <button id="emtpy" type="button">Play Game!</button>
     
     <button id="play_button" onclick="load()" type="button">Play Game!</button>
+    
+    <img class="share" id="share" onclick="share()" src="./img/end_screen/share.png">
 
 </div>
