Update sound and game UI

--- a/pages/game_screen.html
+++ b/pages/game_screen.html
@@ -4,7 +4,7 @@
 
 <img id="client_logo_smaller" src="./img/splash_screen/logo.svg">
 
-<img id="mute" onclick="muteSound()" src="./img/game_screen/mute.png">
+<img id="mute" onclick="muteSound()" src="./img/game_screen/sound.png">
 
     <!-- top title -->
     <div class="instruc" id="instruc">
