update info background image

--- a/pages/information_screen.html
+++ b/pages/information_screen.html
@@ -33,7 +33,7 @@
         Supporter Programme!</p>
     </div>
     <button id="more_button" onclick="link()" type="button">Find out more!</button>
-    <img class="bottom" src="../img/information_screen/bottom5.png">
+    <img class="bottom" src="./img/information_screen/bottom5.png">
 </div>
 
 
