--- a/pages/game_screen.html
+++ b/pages/game_screen.html
@@ -16,5 +16,6 @@
         <img class="help" id="help" src="./img/game_screen/help.png">
         <img class='disable-dbl-tap-zoom' id='ball' src="./img/game_screen/balloon.png" alt="balloon"  style="width: 250px;" onclick="increaseSize()">
         <audio id="inflate" src="./audio/ballooninflate2.wav"></audio>
-        <audio id="pop" src="./audio/balloonpop2.wav"></audio>
+        <!--<audio id="pop" src="./audio/balloonpop2.wav"></audio>-->
+        <audio id="pop" src="./audio/bubblepop.mp3"></audio>
     </div>
