Update UI and animations

--- a/pages/information_screen.html
+++ b/pages/information_screen.html
@@ -28,7 +28,7 @@
         </div>
     </div>
 
-    <p id="moreSpace">If you are interested in supporting <br> 
+    <p>If you are interested in supporting <br> 
         others, join the Community Peer <br>
         Supporter Programme!</p>
     </div>
